welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: not found: type int
	def test(n:int) {
                   ^countTeen:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if (test(a)) {
                ^countTeen:11: error: value += is not a member of Int
		compteur +=
                         ^countTeen:13: error: type mismatch;
 found   : Unit
 required: Boolean
	if (test(b)) {
                ^countTeen:14: error: value += is not a member of Int
		compteur +=
                         ^countTeen:16: error: type mismatch;
 found   : Unit
 required: Boolean
	if (test(b)) {
                ^countTeen:17: error: value += is not a member of Int
		compteur +=
                         ^