welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	def test(n:int) {
		if ((n>=1) && (n<=19)) {
			return true
		} else { 
			return false
		}
	}
	var compteur=0
	if (test(a)) {
		compteur +=
	}
	if (test(b)) {
		compteur +=
	}
	if (test(b)) {
		compteur +=
	}
	return compteur
}
	